# 6-classYOLOv8

./: pyproject.toml
app/: app.py  main.py
config/: config.py
controller/: predict.py  predict_eye.py  predict_skin.py
models/: model.py
templates/: home.html
